refactor(core): 优化代码结构并修复类型检查警告
- 在 By2 类中添加 XPATH_PREFIX 常量以统一 XPath 表达式前缀
- 为 By2 类中的各个定位方法添加 @SuppressWarnings 注解消除 SonarLint 警告
- 将多个组件类中的 stream().collect(Collectors.toList()) 替换为更简洁的 stream().toList()
- 修复 By2Test 中的构造函数测试断言，将 By2.class 改为 By.class
- 更新 Material UI 组件测试中对 By2 的引用为标准的 By 定位器
- 简化 Playwright 和 Selenium 组件中的流操作类型转换
- 修改 Deprecated 注解以包含完整的弃用信息和 forRemoval 标记
- 更新 extension local 配置文件中的服务器配置和 MD5 校验值
- 重构 MUI 组件中的分组注释，简化冗长的分隔线注释