@@ -34,7 +34,6 @@ import com.microsoft.playwright.Locator;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static com.github.grossopa.playwright.component.mui.MuiVersion.V4;
 import static com.github.grossopa.playwright.component.mui.MuiVersion.V5;
@@ -86,7 +85,7 @@ public class MuiList extends AbstractMuiComponent {
         List<WebComponent> components = findComponents("." + config.getRootCss("ListItem"));
         return components.stream()
                 .map(c -> new MuiListItem(c.locator(), driver, config))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
