@@ -41,7 +41,6 @@ import static com.github.grossopa.selenium.component.mui.MuiVersion.V4;
 import static com.github.grossopa.selenium.component.mui.MuiVersion.V5;
 import static com.github.grossopa.selenium.component.mui.MuiVersion.V6;
 import static com.github.grossopa.utils.consts.HtmlConstants.CLASS;
-import static java.util.stream.Collectors.toList;
 
 /**
  * The Material UI Rating implementation
@@ -123,7 +122,7 @@ public class MuiRating extends AbstractMuiComponent {
         return element.findElements(By.className(config.getCssPrefix() + "Rating-icon"))
                 .stream()
                 .map(driver::mapElement)
-                .collect(toList());
+                .toList();
     }
 
     /**
